# event_stream_engine

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  README_en.md  README_zh.md  docker-compose.yml  start.bat
include/: bloom_filter.h  circuit_breaker.h  clickhouse_writer.h  grpc_server.h  kafka_consumer.h  lambda_router.h  lockfree_queue.h  quality_pipeline.h  queue.h  schema_registry.h  tenant_router.h
proto/: event.proto
src/: bloom_filter.cpp  circuit_breaker.cpp  clickhouse_writer.cpp  grpc_server.cpp  kafka_consumer.cpp  lambda_router.cpp  main.cpp  quality_pipeline.cpp  schema_registry.cpp  tenant_router.cpp
tests/: PERFORMANCE_REPORT.md  bench_client.cpp  test_e2e.sh  test_pipeline.cpp  test_queue.cpp
